Thu Aug 23 17:25:05 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (group_member): check if presents.

	* configure.in (XCFLAGS): add _GNU_SOURCE on linux.

	* file.c (group_member): use system routine if available.

	* process.c: moved _GNU_SOURCE macro to Makefile.

Thu Aug 23 16:59:40 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_massign), insnhelper.ci (vm_throw): not use C99
	  comment.

	* cont.c (rb_cont_call, fiber_switch, rb_fiber_resume, rb_fiber_yield):
	  suppress warnings.

	* cont.c (rb_fiber_start): change on non-volatile variable between
	  setjmp and longjmp may not has an effect.

	* enumerator.c (sym_call): initialize first.

	* enumerator.c (enum_iter): typedefed.

	* enumerator.c (next_i): suppress a warning.

Thu Aug 23 16:04:11 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c, insns.def, parse.y: fix massign order.  This change
	  causes performance problem.  Try vm1_swap benchmark.
	  [ruby-dev:31522]

	* insns.def, insnhelper.ci: move process body of expandarray insn to
	  vm_expandarray().

	* bootstraptest/test_knownbug.rb, bootstraptest/test_massign.rb: 
	  move a solved test.

Thu Aug 23 15:51:19 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_norm_arg): ripper has no shadowing check.

	* parse.y (f_block_arg): dispatch blkarg_mark.

Thu Aug 23 15:48:26 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (make_masgn_lhs, iseq_compile_each): fixed indent.

	* compile.c (iseq_translate_threaded_code),
	  vm_evalbody.ci (get_insns_address_table),
	  template/vmtc.inc.tmpl (insns_address_table): constified.

	* vm_evalbody.ci (vm_eval),
	  template/insns_info.inc.tmpl (insn_stack_increase, insn_ret_num):
	  suppress warnings.

Thu Aug 23 13:19:43 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (f_norm_arg): check also nested arguments.  [ruby-dev:31502]

Thu Aug 23 00:06:48 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
