@@ -30,6 +30,31 @@ if defined?(WIN32OLE_TYPE)
       }
       ole_type = WIN32OLE_TYPE.new("Microsoft Shell Controls And Automation", "Shell")
       assert_instance_of(WIN32OLE_TYPE, ole_type)
+
+      ole_type2 = WIN32OLE_TYPE.new("{13709620-C279-11CE-A49E-444553540000}", "Shell")
+      assert_instance_of(WIN32OLE_TYPE, ole_type)
+      assert_equal(ole_type.name, ole_type2.name)
+      assert_equal(ole_type.ole_type, ole_type2.ole_type)
+      assert_equal(ole_type.guid, ole_type2.guid)
+      assert_equal(ole_type.progid, ole_type2.progid)
+      assert_equal(ole_type.name, ole_type2.name)
+      assert_equal(ole_type.ole_type, ole_type2.ole_type)
+      assert_equal(ole_type.guid, ole_type2.guid)
+      assert_equal(ole_type.progid, ole_type2.progid)
+      assert_equal(ole_type.visible?, ole_type2.visible?)
+      assert_equal(ole_type.to_s, ole_type2.to_s)
+      assert_equal(ole_type.major_version, ole_type2.major_version)
+      assert_equal(ole_type.minor_version, ole_type2.minor_version)
+      assert_equal(ole_type.typekind, ole_type2.typekind)
+      assert_equal(ole_type.helpstring, ole_type2.helpstring)
+      assert_equal(ole_type.src_type, ole_type2.src_type)
+      assert_equal(ole_type.helpfile, ole_type2.helpfile)
+      assert_equal(ole_type.helpcontext, ole_type2.helpcontext)
+      assert_equal(ole_type.variables.size, ole_type2.variables.size)
+      assert_equal(ole_type.ole_methods[0].name, ole_type2.ole_methods[0].name)
+      assert_equal(ole_type.ole_typelib.name, ole_type2.ole_typelib.name)
+      assert_equal(ole_type.implemented_ole_types.size, ole_type2.implemented_ole_types.size)
+      assert_equal(ole_type.inspect, ole_type2.inspect)
     end
 
     def setup
